feat: add onboarding flow and premium features
- Introduced onboarding screens for user engagement.
- Implemented premium features with a modal for subscription prompts.
- Enhanced error handling and user feedback with toast notifications.
- Updated authentication methods to support email sign-up and login.
- Added caching mechanisms for offers and places to improve performance.
- Refactored UI components for better consistency and usability.
- Integrated error tracking and performance monitoring services.

--- a/app.json
+++ b/app.json
@@ -32,7 +32,8 @@
       "permissions": [
         "ACCESS_FINE_LOCATION",
         "ACCESS_COARSE_LOCATION"
-      ]
+      ],
+      "googleServicesFile": "./google-services.json"
     },
     "web": {
       "favicon": "./assets/favicon.png",
@@ -55,6 +56,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "googleWebClientId": "YOUR_WEB_CLIENT_ID.apps.googleusercontent.com",
+      "googleAndroidClientId": "YOUR_ANDROID_CLIENT_ID.apps.googleusercontent.com",
+      "googleIosClientId": "YOUR_IOS_CLIENT_ID.apps.googleusercontent.com",
+      "eas": {
+        "projectId": "YOUR_EAS_PROJECT_ID"
+      }
     }
   }
 }
