--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-firebase/analytics": "^23.5.0",
     "@react-navigation/drawer": "^7.7.8",
     "date-fns": "^4.1.0",
     "expo": "~54.0.27",
@@ -43,7 +48,8 @@
     "zustand": "^5.0.9"
   },
   "devDependencies": {
-    "@types/react": "~19.1.0"
+    "@types/react": "~19.1.0",
+    "babel-plugin-transform-import-meta": "^2.3.3"
   },
   "private": true
 }
